force-app/main/default/objects/Badge_Catalog__c/Badge_Catalog__c.object-meta.xml
<CustomObject>
    <label>Club Badge Catalog</label>
    <nameField>
        <label>Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Club Badge Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>