force-app/main/default/objects/Badge_Catalog__c/fields/BadgeSubType__c.field-meta.xml
<CustomField>
    <fullName>BadgeSubType__c</fullName>
    <description>Sub-type of badge</description>
    <label>Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>badgeType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Season</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>