force-app/main/default/objects/Badge_Catalog__c/fields/badgeType__c.field-meta.xml
<CustomField>
    <fullName>badgeType__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Badge_Type_List</valueSetName>
    </valueSet>
</CustomField>