force-app/main/default/objects/Badge_Catalog__c/fields/Brand_Experience_Variation__c.field-meta.xml
<CustomField>
    <fullName>Brand_Experience_Variation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Experience Variation</description>
    <label>Experience Variation</label>
    <referenceTo>Brand_Experience_Variation__c</referenceTo>
    <relationshipLabel>Badges Catalog</relationshipLabel>
    <relationshipName>Badges_Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>