force-app/main/default/objects/Badge_Catalog__c/fields/Club_Name__c.field-meta.xml
<CustomField>
    <fullName>Club_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Associated Club</description>
    <label>Club</label>
    <referenceTo>Club_and_Seasons__c</referenceTo>
    <relationshipLabel>Badges Catalog</relationshipLabel>
    <relationshipName>Badges_Catalog</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>