force-app/main/default/objects/Badge_Catalog__c/fields/ClubSeason__c.field-meta.xml
<CustomField>
    <fullName>ClubSeason__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Associated Club Season</description>
    <label>Club Season</label>
    <referenceTo>Club_Season__c</referenceTo>
    <relationshipLabel>Badges Catalog</relationshipLabel>
    <relationshipName>Badges_Catalog</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>