force-app/main/default/objects/Badge_Catalog__c/fields/Nb_Unlocked_Badges__c.field-meta.xml
<CustomField>
    <fullName>Nb_Unlocked_Badges__c</fullName>
    <description>Number of Child Badge_Collection__c with badgeFlag__c = TRUE</description>
    <label>Unlocked Badges</label>
    <summaryFilterItems>
        <field>Badge_Collection__c.badgeFlag__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Badge_Collection__c.badgeId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>