force-app/main/default/objects/Badge_Catalog__c/validationRules/BadgeSubTypeValidity.validationRule-meta.xml
<ValidationRule>
    <fullName>BadgeSubTypeValidity</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(badgeType__c , &apos;Global Engagement&apos;) &amp;&amp;  ISBLANK(TEXT  (BadgeSubType__c))</errorConditionFormula>
    <errorDisplayField>BadgeSubType__c</errorDisplayField>
    <errorMessage>BadgeSubType__c must be filled when BadgeType__c is Global Engagement</errorMessage>
</ValidationRule>