force-app/main/default/objects/Badge_Catalog__c/validationRules/BadgeSubTypeVisibility.validationRule-meta.xml
<ValidationRule>
    <fullName>BadgeSubTypeVisibility</fullName>
    <active>true</active>
    <errorConditionFormula>NOT ISPICKVAL(badgeType__c , &apos;Global Engagement&apos;) &amp;&amp; NOT ISBLANK(TEXT  (BadgeSubType__c))</errorConditionFormula>
    <errorDisplayField>BadgeSubType__c</errorDisplayField>
    <errorMessage>BadgeSubType__c cannot be set when BadgeType__c is not Global Engagement</errorMessage>
</ValidationRule>