force-app/main/default/objects/Badge_Catalog__c/validationRules/ExcperienceVariationValidity.validationRule-meta.xml
<ValidationRule>
    <fullName>ExcperienceVariationValidity</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(badgeType__c , &apos;Participation to an Experience Variation&apos;) &amp;&amp; ISBLANK( Brand_Experience_Variation__c )</errorConditionFormula>
    <errorDisplayField>Brand_Experience_Variation__c</errorDisplayField>
    <errorMessage>Brand_Experience_Variation__c must be filled when BadgeType__c is Participation</errorMessage>
</ValidationRule>