force-app/main/default/objects/Badge_Catalog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Reference__c</columns>
    <columns>NAME</columns>
    <columns>Club_Name__c</columns>
    <columns>badgeType__c</columns>
    <columns>BadgeSubType__c</columns>
    <columns>Brand_Experience_Variation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>